# ouroboros

./: .gitignore  Cargo.toml  README.md
ouroboros/: Cargo.toml
ouroboros-consensus/: Cargo.toml  build.rs  cbindgen.toml  consensus.h
ouroboros-consensus/src/: lib.rs  message.rs  network.rs  ouroboros_node.rs
ouroboros-consensus/src/ffi/: network.rs  node.rs
ouroboros-crypto/: Cargo.toml
ouroboros-crypto/src/: lib.rs
ouroboros-praos/: Cargo.toml
ouroboros-praos/benches/: benchmark.rs
ouroboros-praos/src/consensus/: mod.rs
ouroboros-praos/tests/: validation.rs
ouroboros-simulation/: Cargo.toml
ouroboros-simulation/src/: main.rs  network.rs
ouroboros/src/: lib.rs
ouroboros/src/ledger/: mod.rs
ouroboros/src/validator/: mod.rs
