[package]
name = "ouroboros-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
cryptoxide = { version = "0.4.4" }
thiserror = "2.0"
rand_core = "0.6"
pallas-codec = "0.31.0"
pallas-crypto = "0.31.0"
serde = "1.0.143"
kes-summed-ed25519 = { git = "https://github.com/txpipe/kes", rev = "f69fb357d46f6a18925543d785850059569d7e78" }
zeroize = "1.8.1"

# The vrf crate has not been fully tested in production environments and still has several upstream issues that
# are open PRs but not merged yet.
vrf_dalek = { git = "https://github.com/txpipe/vrf", rev = "044b45a1a919ba9d9c2471fc5c4d441f13086676" }

[dev-dependencies]
rand = "0.8"
