[package]
name = "ouroboros-praos"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
ouroboros = { path = "../ouroboros" }
ouroboros-crypto = { path = "../ouroboros-crypto" }
pallas-crypto = "0.31.0"
pallas-math = "0.31.0"
pallas-primitives = "0.31.0"
tracing = "0.1"
rayon = "1.10"

[dev-dependencies]
ctor = "0.2"
insta = { version = "1.41", features = ["yaml"] }
mockall = "0.13"
pallas-traverse = "0.31.0"
tracing-subscriber = "0.3"
criterion = "0.5.1"

[[bench]]
harness = false
name = "benchmark"