[package]
name = "ouroboros"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
mockall = "0.13"
pallas-codec = "0.31.0"
pallas-crypto = "0.31.0"
ouroboros-crypto = { path = "../ouroboros-crypto" }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
insta = { version = "1.41", features = ["yaml"] }